fixed about page responsive issue

--- a/academics.html
+++ b/academics.html
@@ -77,7 +77,7 @@
 			<div class="page-hero" style="background-image: url(images/blur-children-class-448877.jpg)"></div>
 			<div class="intro-section-container spring-wood-bg">
 				<div class="intro-text-container">
-					<div class="uk-padding-large uk-text uk-text-left">
+					<div class="uk-padding-large uk-text uk-text-left mobile-padding">
 						<h3 class="uk-text-left column-title"><span>Welcome Message from the Head</span></h3>
 						<p class="uk-margin-large-top text-body">
 							Fountainhead Christian School was founded in 2001 by Rev. Faithful and Rev. Mrs. Mary Biney. In 1984, they moved back to Ghana with the vision and passion to touch many lives. Since then, they have reached out through Leadership Training Programs and Mercy Ministries.<br>
@@ -178,7 +178,7 @@
 					<div class="page-hero" style="background-image: url(images/children-cute-enjoyment-1432697.jpg)"></div>
 
 					<div class="intro-section-container spring-wood-bg">
-					<div class="intro-text-container uk-padding">
+					<div class="intro-text-container uk-padding mobile-padding">
 							<div class=" uk-text uk-text-left">
 								<h3 class="uk-text-left column-title"><span>Welcome Message from the Head</span></h3>
 								<p class="uk-margin-top text-body" >
@@ -196,7 +196,7 @@
 				</section>
 				<!--/SCHOOL INTRODUCTION-->
 				<!--CURRICULUM AREA-->
-				<section class="uk-section uk-padding section-width">
+				<section class="uk-section uk-padding section-width mobile-padding-remove">
 					<div class=" uk-text"><div class="uk-text-left splash-burgundy splash-charter section-title"><span>Academic Programme & Curriculum</span></div></div>
 					<div class=" uk-text">
 						<p class="uk-margin-top text-body" id="schoolCurriculumIntro">
@@ -209,7 +209,7 @@
 				</section>
 				<!--/CURRICULUM AREA-->
 				<!--SUBJECTS AREA-->
-				<section class="uk-section uk-padding section-width">
+				<section class="uk-section uk-padding section-width mobile-padding">
 					<div class=" uk-text"><div class="uk-text-left splash-burgundy splash-charter section-title"><span>Subjects</span></div></div>
 					<div class="uk-padding uk-text">
 
@@ -226,7 +226,7 @@
 					<div class="page-hero" style="background-image: url(images/children-cute-enjoyment-1432697.jpg)"></div>
 
 					<div class="intro-section-container spring-wood-bg">
-					<div class="intro-text-container uk-padding">
+					<div class="intro-text-container uk-padding mobile-padding">
 							<div class=" uk-text uk-text-left">
 								<h3 class="uk-text-left column-title"><span>Welcome Message from the Head</span></h3>
 								<p class="uk-margin-top text-body" >
@@ -244,7 +244,7 @@
 				</section>
 				<!--/SCHOOL INTRODUCTION-->
 				<!--CURRICULUM AREA-->
-				<section class="uk-section uk-padding section-width">
+				<section class="uk-section uk-padding section-width mobile-padding-remove">
 					<div class=" uk-text"><div class="uk-text-left splash-burgundy splash-charter section-title"><span>Academic Programme & Curriculum</span></div></div>
 					<div class=" uk-text">
 						<p class="uk-margin-top text-body" >
@@ -257,7 +257,7 @@
 				</section>
 				<!--/CURRICULUM AREA-->
 				<!--SUBJECTS AREA-->
-				<section class="uk-section uk-padding section-width">
+				<section class="uk-section uk-padding section-width mobile-padding-remove">
 					<div class=" uk-text"><div class="uk-text-left splash-burgundy splash-charter section-title"><span>Subjects</span></div></div>
 					<div class="uk-padding uk-text">
 
@@ -272,7 +272,7 @@
 					<div class="page-hero" style="background-image: url(images/children-cute-enjoyment-1432697.jpg)"></div>
 
 					<div class="intro-section-container spring-wood-bg">
-					<div class="intro-text-container uk-padding">
+					<div class="intro-text-container uk-padding mobile-padding">
 							<div class=" uk-text uk-text-left">
 								<h3 class="uk-text-left column-title"><span>Welcome Message from the Head</span></h3>
 								<p class="uk-margin-top text-body" >
@@ -289,7 +289,7 @@
 				</section>
 				<!--/SCHOOL INTRODUCTION-->
 				<!--CURRICULUM AREA-->
-				<section class="uk-section uk-padding section-width">
+				<section class="uk-section uk-padding section-width mobile-padding-remove">
 					<div class=" uk-text"><div class="uk-text-left splash-burgundy splash-charter section-title"><span>Academic Programme & Curriculum</span></div></div>
 					<div class=" uk-text">
 						<p class="uk-margin-top text-body" >
@@ -302,7 +302,7 @@
 				</section>
 				<!--/CURRICULUM AREA-->
 				<!--SUBJECTS AREA-->
-				<section class="uk-section uk-padding section-width">
+				<section class="uk-section uk-padding section-width mobile-padding">
 					<div class=" uk-text"><div class="uk-text-left splash-burgundy splash-charter section-title"><span>Subjects</span></div></div>
 					<div class="uk-padding uk-text">
 
@@ -317,7 +317,7 @@
 					<div class="page-hero" style="background-image: url(images/children-cute-enjoyment-1432697.jpg)"></div>
 
 					<div class="intro-section-container spring-wood-bg">
-					<div class="intro-text-container uk-padding-large">
+					<div class="intro-text-container uk-padding-large mobile-padding">
 							<div class=" uk-text uk-text-left">
 								<h3 class="uk-text-left column-title"><span>Welcome Message from the Head</span></h3>
 								<p class="uk-margin-top text-body" >
@@ -348,7 +348,7 @@
 				</section>
 				<!--/CURRICULUM AREA-->
 				<!--SUBJECTS AREA-->
-				<section class="uk-section section-width">
+				<section class="uk-section section-width mobile-padding-remove">
 					<div class=" uk-text"><div class="uk-text-left splash-burgundy splash-charter section-title"><span>Subjects</span></div></div>
 					<div class="uk-padding uk-text">
 
