--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 					
 				</div>
 				<div class="message-box">
-					<div class="uk-padding uk-text ">
+					<div class="uk-padding uk-text mobile-padding">
 						<div class="underline-header column-title">Welcome Message from the Head</div>
 						<p class="text-body">
 							We are excited to have you visit Ladlink School!<br><br>
