--- a/admissions.html
+++ b/admissions.html
@@ -79,7 +79,7 @@
 			<div class="page-hero" style="background-image: url(images/adult-brainstorming-business-1181622.jpg)"></div>
 				
 			<div class="intro-section-container spring-wood-bg">
-				<div class="intro-text-container uk-padding-large">
+				<div class="intro-text-container uk-padding-large mobile-padding">
 					<div class=" uk-text uk-text-left">
 						<h3 class="uk-text-left column-title"><span>Welcome Message from the Head</span></h3>
 						<p class="uk-margin-top text-body">
